# ome-claude-marketplace

./: .release-please-manifest.json  CHANGELOG.md  README.md  release-please-config.json
.claude-plugin/: marketplace.json
.github/workflows/: publish-ome-memory.yml
plugins/ome-jira/: .mcp.json  CHANGELOG.md
plugins/ome-jira/.claude-plugin/: plugin.json
plugins/ome-jira/agents/: jira-manager.md
plugins/ome-jira/skills/jira/: SKILL.md
plugins/ome-memory/: .mcp.json  CHANGELOG.md  docker-compose.yml  pyproject.toml
plugins/ome-memory/.claude-plugin/: plugin.json
plugins/ome-memory/agents/: memory-manager.md
plugins/ome-memory/skills/memory/: SKILL.md
plugins/ome-memory/skills/memory-ops/: SKILL.md
plugins/ome-memory/skills/memory-share/: SKILL.md
plugins/ome-memory/src/ome_memory/: db.py  embeddings.py  server.py
