[project]
name = "ome-memory-mcp"
version = "0.1.0"
description = "MCP server for shared agent memory backed by PostgreSQL + pgvector"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "psycopg[binary]>=3.2",
    "sentence-transformers>=3.0",
]

[project.scripts]
ome-memory-mcp = "ome_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ome_memory"]
